--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
                     <img class="gallerypic" src="p4.jpg" alt="Fleeting.">
                   </a>
                   <div class="caption">
-                <p class="lead">Fleeting. <span class="ending">Photographed in Berlin, GER.</span></p>
+                <p class="lead">Fleeting. <span class="ending">Photographed in Berlin, Germany.</span></p>
             </div>
               </div>
             </div>
